# mangum_extra_handlers

./: README.md  pyproject.toml  requirements.txt
mangum_extra_handlers/: __init__.py  eventbridge_handler.py  sns_handler.py  sqs_handler.py  websocket_handler.py
tests/aws_lambda_events/: eventbridge-example.json  sns-example.json  sqs-example.json
